fix collapse styling

--- a/popup.css
+++ b/popup.css
@@ -13,6 +13,10 @@ div.titleScreenButtons{
   position: sticky;
   bottom: 0;
 }
+div.card-header{
+  padding: 2px;
+  background-color: #484e71;
+}
 div.darkMode {
   background-image: url("images/1080_waterfall_darkmode.gif");
   background-size: contain;
